--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Questions/Views/SaveCategory/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Questions/Views/SaveCategory/Index.cshtml
@@ -1,49 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
-@*@using (Html.BeginForm("FileUpload", "SaveCategory", FormMethod.Post,
-                                                                     new { area = "Questions", enctype = "multipart/form-data" }))
-    {
-        <p>
-            <label for="cname">Name (required, at least 2 characters)</label>
-            <input id="cname" name="name" minlength="2" type="text" required>
-        </p>
-        <p>
-            <label for="description">description</label>
-            <input id="description" name="description" minlength="2" type="text" required>
-        </p>
-        <label for="field">Required, only .xls and .csv files allowed: </label>
-        <input type="file" class="left" id="file" name="file" accept=".jpg">
-        <br />
-        <input type="submit" value="Upload">
-
-    }*@
-
-
-@*@using (Html.BeginForm(new { area = "security", controller = "account", action = "logon", method = FormMethod.Post, enctype = "multipart/form-data" }))
-        {
-            <input type="submit" value="Upload">
-        }
-
-    <form id="myform" method="post" asp-area asp-action="FileUpload" asp-controller="Home" enctype="multipart/form-data">
-        <p>
-            <label for="cname">Name (required, at least 2 characters)</label>
-            <input id="cname" name="name" minlength="2" type="text" required>
-        </p>
-        <label for="field">Required, only .xls and .csv files allowed: </label>
-        <input type="file" class="left" id="file" name="file" accept=".jpg">
-        <br />
-        <input type="submit" value="Validate!">
-    </form>
-*@
-<style>
-
-</style>
+﻿@model List<Questions.Domain.Category>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-xm-4">
         .
     </div>
     <div class="col-md-4">
@@ -74,66 +31,215 @@
                         <input type="submit" value="Save" class="btn btn-default">
                     </div>
                 </div>
-                
+
             </form>
         </section>
     </div>
-    <div class="col-md-3">
-
-    </div>
-
-        
+    
 </div>
 <div class="row">
     <div class="col-lg-12">
         <div class="panel-body">
-            <div class="table-responsive">
+            
                 <table class="table table-hover table-striped table-bordered">
                     <thead>
                         <tr>
-                            <th>
-                                A
+                            <th class="hidden">
+                                ID
                             </th>
                             <th>
-                                B
+                                Name
+                            </th>
+                            <th style="width:10px">
+                                Description
                             </th>
                             <th>
-
-                               Action
+                                Action
                             </th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>
-                                1
-                            </td>
-                            <td>
-                                2
-                            </td>
-                            <td>
-                                <div class="row">
-                                    <div class="col-xs-2">
-                                        <button id="btnApprove" type="button" class="btn btn-collapse">
-                                            <span class="glyphicon glyphicon-ok"></span> Approve
-                                        </button>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td class="hidden">
+                                    @Html.DisplayFor(modelItem => item.Id)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    <div class="col-xs-6">
+                                        @Html.DisplayFor(modelItem => item.Description)
                                     </div>
-                                    <div class="col-xs-2">
-                                        <button id="btnDecline" type="button" class="btn btn-danger">
-                                            <span class="glyphicon glyphicon-trash"></span> Decline
-                                        </button>
+                                </td>
+                                <td>
+                                    <div class="row">
+                                        <div class="col-xs-3">
+                                            <button id="btnEdit" type="button" class="btn btn-collapse btnEdit">
+                                                <span class="glyphicon glyphicon-ok"></span> Edit
+                                            </button>
+                                        </div>
+                                        <div class="col-xs-1">
+                                            <button id="brnDelete" type="button" class="btn btn-danger btnDelete">
+                                                <span class="glyphicon glyphicon-trash"></span> Delete
+                                            </button>
+                                        </div>
                                     </div>
-                                </div>
-                                
-                            </td>
-                        </tr>
+
+                                </td>
+                            </tr>
+                        }
                     </tbody>
+
                 </table>
+            
+        </div>
+    </div>
+</div>
+<!-- approveProjectModal Modal -->
+<div class="modal fade" id="approveProjectModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Final Approval</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="control-label">Id</label>
+                    <input id="Id" type="text" class="form-control" placeholder="Id" disabled>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label">Name</label>
+                    <input id="pName" type="text" class="form-control" placeholder="Name">
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Description</label>
+                    <input id="pDescription" type="text" class="form-control" placeholder="Name">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button id="btnConfirm" type="button" class="btn btn-success">Confirm</button>
+
+
             </div>
         </div>
     </div>
 </div>
 
-@*@section Scripts {
-        @{ Html.RenderPartial("~/Views/Shared/_ValidationScriptsPartial"); }
-    }*@
+<script>
+    $(function () {
+        
+
+        $('.btnEdit').on('click', function () {
+            var Id =$.trim( $(this).closest('tr').find('td:eq(0)').text());
+            $('#Id').val(Id);
+            
+            $('#pName').val($.trim($(this).closest('tr').find('td:eq(1)').text()));
+            $('#pDescription').val($.trim($(this).closest('tr').find('td:eq(2)').text()));
+            $('#approveProjectModal').modal({
+                show: true,
+                backdrop: 'static'
+            });
+
+           
+
+        });
+        $('#btnConfirm').on('click', function () {
+            var Id = $('#Id').val();
+            var updatedName = $('#pName').val();
+            var updatedDescription=$('#pDescription').val()
+            var url = '@Url.Action("Edit", "SaveCategory", new { Area = "Questions" })';
+            var obj = {};
+            obj.Id = Id;
+            obj.Name = updatedName;
+            obj.Description = updatedDescription;
+            console.log(obj);
+            $.ajax({
+                url: url,
+                type: 'POST',
+                data: obj,
+                async: false,
+                success: function (respText) {
+                    console.log(respText);
+                    alert('Saved Successfully');
+                    $('#approveProjectModal').modal('hide');
+                },
+                error: function (jqXhr, textStatus, errorThrown) {
+                    alert('error ..Check log for details');
+                    console.log(textStatus, errorThrown);
+                    var msg = '';
+                    if (jqXhr.status === 0) {
+                        msg = 'Not connect.\n Verify Network.';
+                    } else if (jqXhr.status == 404) {
+                        msg = 'Requested page not found. [404]';
+                    } else if (jqXhr.status == 500) {
+                        msg = 'Internal Server Error [500].';
+                    } else if (errorThrown === 'parsererror') {
+                        msg = 'Requested JSON parse failed.';
+                    } else if (errorThrown === 'timeout') {
+                        msg = 'Time out error.';
+                    } else if (errorThrown === 'abort') {
+                        msg = 'Ajax request aborted.';
+                    } else {
+                        msg = 'Uncaught Error.\n' + jqXhr.responseText;
+                    }
+                    console.log(msg);
+                }
+            });
+        });
+
+        $('.btnDelete').on('click', function () {
+            var Id = $.trim($(this).closest('tr').find('td:eq(0)').text());
+            console.log('De;ete Button Clicked'+Id);
+            var currentTr = $(this).closest('tr');
+
+           // var url = '/Questions/SaveCategory/Delete';
+            var url = '@Url.Action("Delete", "SaveCategory", new { Area = "Questions" })';
+            var obj = {};
+            obj.Id = Id;
+            $.ajax({
+                url: url,
+                type: 'POST',
+                data: obj,
+                async: false,
+                success: function (respText) {
+                    console.log(respText);
+                   // alert('Deleted Successfullt');
+                    currentTr.remove();
+                },
+                error: function (jqXhr, textStatus, errorThrown) {
+                    alert('error ..Check log for details');
+                    console.log(textStatus, errorThrown);
+                    var msg = '';
+                    if (jqXhr.status === 0) {
+                        msg = 'Not connect.\n Verify Network.';
+                    } else if (jqXhr.status == 404) {
+                        msg = 'Requested page not found. [404]';
+                    } else if (jqXhr.status == 500) {
+                        msg = 'Internal Server Error [500].';
+                    } else if (errorThrown === 'parsererror') {
+                        msg = 'Requested JSON parse failed.';
+                    } else if (errorThrown === 'timeout') {
+                        msg = 'Time out error.';
+                    } else if (errorThrown === 'abort') {
+                        msg = 'Ajax request aborted.';
+                    } else {
+                        msg = 'Uncaught Error.\n' + jqXhr.responseText;
+                    }
+                    console.log(msg);
+                }
+            });
+
+        });
+
+    })
+</script>
+@section Scripts {
+    @*@{ Html.RenderPartial("~/Views/Shared/_ValidationScriptsPartial"); }*@
+
+
+}
