--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -54,7 +54,7 @@
                         </div>
                         <div class="article-details">
                             <div class="user-info clearfix">
-                                <img class="user-image" src="../../../../images/{{question.userViewModel?.imageUrl}}" />
+                                <img class="user-image" src="../../../../profile/{{question.userViewModel?.imageUrl}}" />
                                 <div class="header-info" >{{question.userViewModel.name}}, {{question.userViewModel.occupation}} {{question?.createdOn | date: 'dd MMM, yyyy'}}</div>
                             </div>
                             <div class="answer-text" [innerHTML]="question.lastAnswer?.text.substring(0,200)"></div>
