--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -53,8 +53,7 @@
                                 <div class="collapse comment-panel" id="questionComment{{question.id}}">
                                     <form #commentForm="ngForm" class="form-horizontal " role="form">
                                         <div class="comment-input">
-                                            <!--<div>{{question.id}} </div>-->
-                                            <img class="user-image comment-img" src="../../../../profile/{{comment?.userViewModel?.imageUrl}}" />
+                                            <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl}}" />
                                             <input class="form-control" [(ngModel)]="commentText" [ngModelOptions]="{standalone: true}" id="comment" />
                                             <button type="button" class="btn btn-primary" (click)="submitComment(question.id)">Submit</button>
                                         </div>
@@ -65,7 +64,9 @@
                                             <div *ngIf="comment">
                                                 <img class="user-image comment-img" src="../../../../profile/{{comment?.userViewModel?.imageUrl}}" />
                                                 <div class="header-info">{{comment?.userViewModel?.name}}</div>
-                                                <!--,{{date.getMonthName(comment?.time?.getMonth())}} {{comment?.time?.getDate()}} {{comment?.time?.getFullYear()}}-->
+                                                
+
+
                                                 <p class="answer-text">{{comment.commentText}}</p>
                                             </div>
                                             <hr />
