--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,4 +1,31 @@
-﻿<div class="row">
+﻿<style>
+    .counter-box {
+    position: relative;
+    background: #107ebf;
+    display: inline-block;
+    border-radius: 2px;
+    height: 23px;
+    width: 40px;
+    text-align: center;
+    color:white;
+    margin-left:2px;
+}
+    .counter-box:after {
+    bottom: 100%;
+    right: 55%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-color: rgba(136, 183, 213, 0);
+    border-bottom-color: #107ebf;
+    border-width: 1px 5px 10px;
+    margin-left: -30px;
+}
+</style>
+<div class="row">
     <div class="col-md-3 left-gap">
         <question-left-menu></question-left-menu>
     </div>
@@ -59,9 +86,9 @@
                             </div>
                             <div class="answer-text" [innerHTML]="question.lastAnswer?.text.substring(0,200)"></div>
                             <div *ngIf="question.answers[question.answers.length-1]"> by {{question.answers[question.answers.length-1]?.userViewModel?.name}} {{question.answers[question.answers.length-1]?.createdOn | date: 'dd MMM, yyyy'}}</div>
-                            
+                            <hr />
                             <div class="status-panel">
-                                <hr />
+                                
                                 <img class="like-logo" src="../images/fade-logo.png" />
                                 <div class="status-line">{{question?.likes?.length}}</div>
                                 <a (click)="submitLike(question.id)"><div class="status-line">Like</div></a>
@@ -84,7 +111,7 @@
                             <div class="collapse comment-panel" id="questionComment{{question.id}}">
                                 <form #commentForm="ngForm" class="form-horizontal" role="form">
                                     <div class="comment-input">
-                                        <img class="user-image comment-img" src="../../../../images/avatar.png" />
+                                        <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl}}" />
                                         <input class="form-control" />
                                         <button type="button" class="btn btn-primary">comment</button>
                                     </div>
@@ -93,7 +120,7 @@
                                 <div class="card card-block">
                                     <div *ngFor="let comment of question.comments">
                                         <div *ngIf="comment">
-                                            <img class="user-image comment-img" src="../../../../images/avatar.png" />
+                                            <img class="user-image comment-img" src="../../../../profile/{{comment?.userViewModel?.imageUrl}}" />
                                             <div class="header-info">{{comment?.userViewModel?.name}}</div>
 
                                             <!--,{{date.getMonthName(comment?.time?.getMonth())}} {{comment?.time?.getDate()}} {{comment?.time?.getFullYear()}}-->
