--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -11,12 +11,17 @@
     <!-- ===================== -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
+            
             <form #answerVM="ngForm" class="form-horizontal" role="form">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
+                        <h1>&iquest;{{question.title}}?</h1>
+                        <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl}}" />
+                        <div class="header-info">{{_logObj.user?.name}}, {{_logObj.user?.occupassion}} </div>
+                        
                         <div [hidden]="answerField.valid || answerField.pristine"
                              class="alert alert-danger">
                             Please type your answer and then submit!!
@@ -54,7 +59,7 @@
             <img class="image-border" src="../../../../images/border.png" />
         </div>-->
         <div class="article-details">
-            <img class="user-image" src="../../../../images/avatar.png" />
+            <img class="user-image" src="../../../../profile/{{question.userViewModel?.imageUrl}}" />
             <div class="header-info">{{question.userViewModel?.name}}, {{question.userViewModel?.occupation}} {{question?.createdOn | date: 'dd MMM, yyyy'}} </div>
             <!--<div class="header-info">{{date.getMonthName(question.date?.getMonth())}} {{question.date?.getFullYear()}}</div>-->
             <p class="answer-text" [innerHTML]="question.body"></p>
@@ -80,7 +85,7 @@
             <div class="collapse comment-panel" id="collapseExample">
                 <form #commentForm="ngForm" class="form-horizontal" role="form">
                     <div class="comment-input">
-                        <img class="user-image comment-img" src="../../../../images/avatar.png" />
+                        <img class="user-image" src="../../../../profile/{{_logObj.user?.imageUrl}}" />
                         <input class="form-control" [(ngModel)]="commentText" [ngModelOptions]="{standalone: true}" id="comment" />
                         <button type="button" class="btn btn-primary" (click)="submitComment(question.id)">Save</button>
                     </div>
@@ -88,7 +93,7 @@
                 <div class="card card-block">
                     <div *ngFor="let comment of question.comments" class="clearfix">
                         <div *ngIf="comment">
-                            <img class="user-image comment-img" src="../../../../images/avatar.png" />
+                            <img class="user-image comment-img" src="../../../../profile/{{comment?.userViewModel?.imageUrl}}" />
                             <div class="header-info">{{comment?.userViewModel?.name}}</div>
 
                                 <!--,{{date.getMonthName(comment?.time?.getMonth())}} {{comment?.time?.getDate()}} {{comment?.time?.getFullYear()}}-->
@@ -109,7 +114,7 @@
                 <img class="image-border" src="../../../../images/border.png" />
             </div>-->
             <div class="article-details" *ngIf="answer">
-                <img class="user-image " src="../../../../images/avatar.png" />
+                <img class="user-image" src="../../../../profile/{{question.userViewModel?.imageUrl}}" />
                 <div class="header-info">{{answer.userViewModel?.name}},{{answer.userViewModel?.occupation}} {{answer?.createdOn | date: 'dd MMM, yyyy'}}</div>
                 <p class="answer-text" [innerHTML]="answer.text"></p>
                 <div class="status-panel">
@@ -133,7 +138,7 @@
                 <div class="collapse comment-panel" id="answerComment{{answer.id}}">
                     <form #commentAnswerForm="ngForm" class="form-horizontal" role="form">
                         <div class="comment-input">
-                            <img class="user-image comment-img" src="../../../../images/avatar.png" />
+                            <img class="user-image" src="../../../../profile/{{_logObj.user?.imageUrl}}" />
                             <input class="form-control" [(ngModel)]="commentAnswerText" [ngModelOptions]="{standalone: true}" id="comment" />
                             <button type="button" class="btn btn-primary" (click)="submitCommentForAnswer(answer.id)">Save</button>
                         </div>
@@ -141,10 +146,7 @@
                     <div class="card card-block">
                         <div *ngFor="let comment of answer.comments">
                             <div *ngIf="comment">
-                                <img class="user-image comment-img" src="../../../../images/avatar.png" />
-
-
-
+                                <img class="user-image comment-img" src="../../../../profile/{{comment?.userViewModel?.imageUrl}}" />
                                         <!--<div class="header-info">{{comment?.user?.name}},{{date.getMonthName(comment?.time?.getMonth())}} {{comment?.time?.getDate()}} {{comment?.time?.getFullYear()}}</div>-->
                                 <p class="answer-text">{{comment?.commentText}}</p>
                             </div>
